--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
+    <link rel="stylesheet" href="iziToast.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -20,8 +21,8 @@
 
       <div id="gallery"></div>
 
-
-
+    
+    <script src="iziToast.min.js" type="text/javascript"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
