--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <form id="form">
         <label for="search-input">Search</label>
         <input type="text" id="search-input" required>
-        <button type="submit">Search</button>
+        <button class="button" type="submit">Search</button>
       </form>
 
       <div id="loader" style="display: none;">Loading...</div>
