--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <div id="loader" style="display: none;">Loading...</div>
 
       <div id="gallery">
-        <ul class="gallery-item"></ul>
+        <ul class="gallery"></ul>
       </div>
 
     
